--- a/styles/index.css
+++ b/styles/index.css
@@ -55,35 +55,45 @@ nav input {
 }
 
 .profile-div {
-  width: 250px;
-  margin-right: 30px;
+  width: 12em;
+  margin: 2em;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 40px;
   transition: 0.5s;
+  padding: 2em 1em;
+  background: #2c2c2c;
+  color: #fff;
+  border-radius: 0.5em;
+  box-shadow: #000 2px 2px 2px;
+  border: 2px solid transparent;
 }
 
 .profile-div:hover {
-  opacity: 0.5;
+  transform: scale(1.05);
+  box-shadow: #000 2px 2px 4px;
 }
 
 .profile-div img {
   height: 100px;
   border-radius: 100%;
   cursor: pointer;
+  border: 3px solid #00acee;
 }
 
 .profile-div p:nth-child(2) {
   font-weight: bold;
   font-size: 20px;
   cursor: pointer;
+  text-align: center;
+  margin: 1em auto 0em auto;
 }
 
 .profile-div p:nth-child(3) {
   font-size: 18px;
   cursor: pointer;
+  color: #cdcdcd;
 }
 
 @media (max-width: 800px) {
