--- a/styles/index.css
+++ b/styles/index.css
@@ -16,22 +16,36 @@ nav {
   justify-content: space-between;
 }
 
-nav img {
-  position: absolute;
-  height: 25px;
-  margin-top: 9px;
-  margin-left: 9px;
+.input-div {
+  display: flex;
+  align-items: center;
 }
 
-nav input {
+.input-div img {
+  position: absolute;
+  height: 22px;
+  margin-left: 5px;
+}
+
+.input-div img:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.search-input {
+  border: none;
   outline: none;
-  width: 556px;
-  padding: 10px;
-  padding-left: 35px;
-  border-radius: 125px;
-  font-size: 15px;
-  font-family: 'Quicksand', sans-serif;
-  border: 2px solid #1e1e1e;
+  flex: 1;
+  font-size: 1.2rem;
+  width: 500px;
+  padding: 0.5rem;
+  padding-left: 30px;
+  border: 1px solid #ccc;
+  border-radius: 0.5rem;
+}
+
+.search-input::placeholder {
+  color: black;
 }
 
 .img-div {
@@ -40,7 +54,7 @@ nav input {
 }
 
 .twitter-img {
-  margin-right: 60px;
+  margin-right: 30px;
 }
 .img-div img{
   transition: transform 1s;
