--- a/styles/index.css
+++ b/styles/index.css
@@ -56,10 +56,12 @@ nav {
 .twitter-img {
   margin-right: 30px;
 }
-.img-div img{
+
+.img-div img {
   transition: transform 1s;
 }
-.img-div img:hover{
+
+.img-div img:hover {
   transform: scale(1.4);
 }
 
@@ -142,6 +144,26 @@ nav {
 .profile-div p:nth-child(3) {
   font-size: 1em;
   cursor: pointer;
+  color: #cdcdcd;
+}
+
+.no-profile-div {
+  width: 100%;
+  margin-top: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: #fff;
+  font-size: 1.5em;
+  font-weight: bold;
+  text-align: center;
+}
+
+.no-profile-div>p {
+  margin-top: 1em;
+  font-size: 1em;
+  font-weight: normal;
   color: #cdcdcd;
 }
 
