fixed: "No profile found" when search is not used

--- a/styles/index.css
+++ b/styles/index.css
@@ -150,7 +150,7 @@ nav {
 .no-profile-div {
   width: 100%;
   margin-top: 60px;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   flex-direction: column;
