Scroll Bar Added

--- a/styles/index.css
+++ b/styles/index.css
@@ -212,5 +212,17 @@ color: #1f2937;
   }
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #A0A0A0;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #353535;
+}
+
 
 
