--- a/styles/index.css
+++ b/styles/index.css
@@ -321,7 +321,6 @@ ul{
   text-decoration: none;
   font-weight: 300;
   color: #bbbbbb;
-  display: block;
   transition: all 0.3s ease;
 }
 
@@ -340,6 +339,7 @@ ul{
   line-height: 40px;
   border-radius: 50%;
   color: #ffffff;
+  white-space: nowrap;
   transition: all 0.5s ease;
 }
 
